<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageSwitcher
        android:id="@+id/imageSwitcher_activity_inicio"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/vinilo_o_s"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tu_tienda_de_discos_de_vinilo"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_verDiscos_activity_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFA000"
        android:text="@string/ver_discos" />

    <Button
        android:id="@+id/btn_registrarse_activity_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0288D1"
        android:text="@string/registrarse" />


</LinearLayout>